Bug 229293 - Crash on importing the project [CMakeManager::dirtyFile]
Summary: Crash on importing the project [CMakeManager::dirtyFile]
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: CMake (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 226917 227519 230107 230154 231212 231796 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-03 20:21 UTC by Roman
Modified: 2014-04-12 10:45 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman 2010-03-03 20:21:23 UTC
Application: kdevelop (3.9.98 (using KDevPlatform 0.9.98))
KDE Platform Version: 4.4.1 (KDE 4.4.1) "release 225"
Qt Version: 4.6.2
Operating System: Linux 2.6.31.12-0.1-pae i686
Distribution: "openSUSE 11.2 (i586)"

-- Information about the crash:
Project->Open/Import project->select in file system, OK, select buid type to debug, OK -> crash

 -- Backtrace:
Application: KDevelop (kdevelop.bin), signal: Segmentation fault
[Current thread is 1 (Thread 0xb4458760 (LWP 29734))]

Thread 5 (Thread 0xb0f4bb70 (LWP 29736)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb61770c2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb61ef09c in wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:85
#3  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:159
#4  0xb4e759d5 in KDevelop::DUChainPrivate::CleanupThread::run (this=0x8311b20) at /home/roman/projs/kdevplatform/language/duchain/duchain.cpp:286
#5  0xb61ee0bf in QThreadPrivate::start (arg=0x8311b20) at thread/qthread_unix.cpp:248
#6  0xb61726e5 in start_thread () from /lib/libpthread.so.0
#7  0xb6172600 in ?? () from /lib/libpthread.so.0

Thread 4 (Thread 0xaddd8b70 (LWP 29737)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb54a95b1 in select () from /lib/libc.so.6
#2  0xb62d2adc in QProcessManager::run (this=0xb640f890) at io/qprocess_unix.cpp:245
#3  0xb61ee0bf in QThreadPrivate::start (arg=0xb640f890) at thread/qthread_unix.cpp:248
#4  0xb61726e5 in start_thread () from /lib/libpthread.so.0
#5  0xb6172600 in ?? () from /lib/libpthread.so.0

Thread 3 (Thread 0xacdd6b70 (LWP 29753)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6176d95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb61ef110 in wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:159
#4  0xb710be39 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x88e9460, th=0x88ebdf0) at /usr/src/debug/kdelibs-4.4.1/threadweaver/Weaver/WeaverImpl.cpp:365
#5  0xb710655a in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x88e9460, th=0x88ebdf0) at /usr/src/debug/kdelibs-4.4.1/threadweaver/Weaver/WeaverImpl.cpp:356
#6  0xb710d374 in ThreadWeaver::WorkingHardState::applyForWork (this=0x88ebbe8, th=0x88ebdf0) at /usr/src/debug/kdelibs-4.4.1/threadweaver/Weaver/WorkingHardState.cpp:71
#7  0xb710d423 in ThreadWeaver::WeaverImpl::applyForWork (this=0x88e9460, th=0x88ebdf0, previous=0x8aada40) at /usr/src/debug/kdelibs-4.4.1/threadweaver/Weaver/WeaverImpl.cpp:351
#8  0xb7107af4 in ThreadWeaver::ThreadRunHelper::run (this=0xacdd62c4, parent=0x88e9460, th=0x88ebdf0) at /usr/src/debug/kdelibs-4.4.1/threadweaver/Weaver/Thread.cpp:87
#9  0xb7109c7a in ThreadWeaver::Thread::run (this=0x88ebdf0) at /usr/src/debug/kdelibs-4.4.1/threadweaver/Weaver/Thread.cpp:142
#10 0xb61ee0bf in QThreadPrivate::start (arg=0x88ebdf0) at thread/qthread_unix.cpp:248
#11 0xb61726e5 in start_thread () from /lib/libpthread.so.0
#12 0xb6172600 in ?? () from /lib/libpthread.so.0

Thread 2 (Thread 0xad5d7b70 (LWP 29754)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb54a95b1 in select () from /lib/libc.so.6
#2  0xb632196c in qt_safe_select(int, <anonymous struct> *, <anonymous struct> *, <anonymous struct> *, const timeval *) (nfds=13, fdread=0xad5d6678, fdwrite=0xad5d65f8, fdexcept=0x0, orig_timeout=
    0x0) at kernel/qcore_unix.cpp:143
#3  0xb62cfcc7 in select_msecs(int, <anonymous struct> *, <anonymous struct> *, int) (nfds=13, fdread=0xad5d6678, fdwrite=0xad5d65f8, timeout=-1) at io/qprocess_unix.cpp:885
#4  0xb62d0878 in QProcessPrivate::waitForFinished (this=0x8983498, msecs=-1) at io/qprocess_unix.cpp:1101
#5  0xb628b014 in QProcess::waitForFinished (this=0xad5d6784, msecs=-1) at io/qprocess.cpp:1688
#6  0xb6291256 in QProcess::execute (program=..., arguments=...) at io/qprocess.cpp:2074
#7  0xb773cbca in KToolInvocation::startKdeinit() () from /usr/lib/libkdecore.so.5
#8  0xb773cd13 in KToolInvocation::klauncher() () from /usr/lib/libkdecore.so.5
#9  0xb773ce5d in ?? () from /usr/lib/libkdecore.so.5
#10 0xb773d123 in KSycoca::findFactory(KSycocaFactoryId) () from /usr/lib/libkdecore.so.5
#11 0xb773d2f5 in KSycocaFactory::KSycocaFactory(KSycocaFactoryId) () from /usr/lib/libkdecore.so.5
#12 0xb77ba6d9 in KMimeTypeFactory::KMimeTypeFactory() () from /usr/lib/libkdecore.so.5
#13 0xb77bac24 in KMimeTypeFactory::self() () from /usr/lib/libkdecore.so.5
#14 0xb77be20b in KMimeType::findByUrlHelper(KUrl const&, unsigned int, bool, QIODevice*, int*) () from /usr/lib/libkdecore.so.5
#15 0xb77be823 in KMimeType::findByUrl(KUrl const&, unsigned int, bool, bool, int*) () from /usr/lib/libkdecore.so.5
#16 0xb5046a8a in KDevelop::ProjectFileItem::setUrl (this=0x8932700, url=...) at /home/roman/projs/kdevplatform/project/projectmodel.cpp:463
#17 0xb5046c19 in KDevelop::ProjectFileItem::ProjectFileItem (this=0x8932700, project=0x89ae1e0, file=..., parent=0x896ba38) at /home/roman/projs/kdevplatform/project/projectmodel.cpp:414
#18 0xac0558a3 in CMakeManager::parse (this=0x89a9908, item=0x89ac680) at /home/roman/projs/kdevelop/projectmanagers/cmake/cmakemanager.cpp:570
#19 0xb504a680 in KDevelop::ImportProjectJobPrivate::import (this=0x8b84228, folder=0x89ac680) at /home/roman/projs/kdevplatform/project/importprojectjob.cpp:53
#20 0xb504a174 in QtConcurrent::VoidStoredMemberFunctionPointerCall1<void, KDevelop::ImportProjectJobPrivate, KDevelop::ProjectFolderItem*, KDevelop::ProjectFolderItem*>::runFunctor (this=0x8ad4a28)
    at /usr/include/QtCore/qtconcurrentstoredfunctioncall.h:426
#21 0xb504a49e in QtConcurrent::RunFunctionTask<void>::run (this=0x8ad4a28) at /usr/include/QtCore/qtconcurrentrunbase.h:120
#22 0xb61e37f2 in QThreadPoolThread::run (this=0x8ad4d70) at concurrent/qthreadpool.cpp:106
#23 0xb61ee0bf in QThreadPrivate::start (arg=0x8ad4d70) at thread/qthread_unix.cpp:248
#24 0xb61726e5 in start_thread () from /lib/libpthread.so.0
#25 0xb6172600 in ?? () from /lib/libpthread.so.0

Thread 1 (Thread 0xb4458760 (LWP 29734)):
[KCrash Handler]
#6  CMakeManager::dirtyFile (this=0x89a9908, dirty=...) at /home/roman/projs/kdevelop/projectmanagers/cmake/cmakemanager.cpp:808
#7  0xac04ae1b in CMakeManager::qt_metacall (this=0x89a9908, _c=InvokeMetaMethod, _id=13, _a=0xbf9bd9b8) at /home/roman/projs/kdevelop/build/projectmanagers/cmake/cmakemanager.moc:90
#8  0xb62fd14d in QMetaObject::metacall (object=0x89a9908, cl=3042161568, idx=13, argv=0xbf9bd9b8) at kernel/qmetaobject.cpp:237
#9  0xb630bfaa in QMetaObject::activate (sender=0x8a86ea8, m=0xb74a371c, local_signal_index=0, argv=0xbf9bd9b8) at kernel/qobject.cpp:3293
#10 0xb728b095 in KDirWatch::dirty (this=0x8a86ea8, _t1=...) at /usr/src/debug/kdelibs-4.4.1/build/kio/kdirwatch.moc:99
#11 0xb728b0c3 in KDirWatch::setDirty (this=0x8a86ea8, _file=...) at /usr/src/debug/kdelibs-4.4.1/kio/kio/kdirwatch.cpp:1792
#12 0xb72d8d23 in KDirWatch::qt_metacall (this=0x8a86ea8, _c=InvokeMetaMethod, _id=8, _a=0x84991a8) at /usr/src/debug/kdelibs-4.4.1/build/kio/kdirwatch.moc:86
#13 0xb62fd14d in QMetaObject::metacall (object=0x8a86ea8, cl=3042161568, idx=8, argv=0x84991a8) at kernel/qmetaobject.cpp:237
#14 0xb6307ad5 in QMetaCallEvent::placeMetaCall (this=0x89ee7e8, object=0x8a86ea8) at kernel/qobject.cpp:561
#15 0xb6308c7f in QObject::event (this=0x8a86ea8, e=0x89ee7e8) at kernel/qobject.cpp:1248
#16 0xb58053fc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#17 0xb580c248 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb6603b81 in KApplication::notify (this=0xbf9be314, receiver=0x8a86ea8, event=0x89ee7e8) at /usr/src/debug/kdelibs-4.4.1/kdeui/kernel/kapplication.cpp:302
#19 0xb62f7dde in QCoreApplication::notifyInternal (this=0xbf9be314, receiver=0x8a86ea8, event=0x89ee7e8) at kernel/qcoreapplication.cpp:704
#20 0xb62fa7e3 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:215
#21 QCoreApplicationPrivate::sendPostedEvents (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.cpp:1345
#22 0xb62fa93c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#23 0xb6324e4d in sendPostedEvents () at kernel/qcoreapplication.h:220
#24 postEventSourceDispatch () at kernel/qeventdispatcher_glib.cpp:276
#25 0xb49404c2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0xb4943d98 in ?? () from /usr/lib/libglib-2.0.so.0
#27 0xb4943ebe in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0xb6324931 in QEventDispatcherGlib::processEvents (this=0x805d1f8, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#29 0xb58c5e0a in ?? () from /usr/lib/libQtGui.so.4
#30 0xb62f644d in QEventLoop::processEvents (this=0xbf9be1d4, flags=) at kernel/qeventloop.cpp:149
#31 0xb62f6899 in QEventLoop::exec (this=0xbf9be1d4, flags=...) at kernel/qeventloop.cpp:201
#32 0xb62faa10 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#33 0xb58054a4 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#34 0x0804fea3 in main (argc=1, argv=0xbf9be924) at /home/roman/projs/kdevelop/app/main_internal.cpp:222

Reported using DrKonqi
Comment 1 Andreas Pakulat 2010-03-03 20:51:42 UTC
Milian, shouldn't this be fixed with KDE4.4.1 and the KIO-fixes from dfaure?
Comment 2 Milian Wolff 2010-03-04 11:03:42 UTC
The KDirWatch problem crashed somewhere inside KDirWatch, not in the CmakeManager. And if you look at the code the Project pointer p is not checked in that branch of the conditional. Apol should have a look at it.
Comment 3 Andreas Pakulat 2010-03-04 11:57:07 UTC
Thanks for checking, assigning to cmake.
Comment 4 Andreas Pakulat 2010-03-09 16:52:04 UTC
*** Bug 230107 has been marked as a duplicate of this bug. ***
Comment 5 Andreas Pakulat 2010-03-10 09:17:12 UTC
*** Bug 230154 has been marked as a duplicate of this bug. ***
Comment 6 Andreas Pakulat 2010-03-18 12:30:37 UTC
*** Bug 227519 has been marked as a duplicate of this bug. ***
Comment 7 Andreas Pakulat 2010-03-18 12:30:43 UTC
*** Bug 231212 has been marked as a duplicate of this bug. ***
Comment 8 Aleix Pol 2010-03-20 02:44:51 UTC
SVN commit 1105397 by apol:

First approach to fix the reload cmake project crash.
Prevents the project to be reloaded while it's already being reloaded.

BUG: 229293


 M  +4 -3      cmakemanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105397
Comment 9 Andreas Pakulat 2010-03-22 20:59:28 UTC
*** Bug 226917 has been marked as a duplicate of this bug. ***
Comment 10 Andreas Pakulat 2010-03-22 20:59:46 UTC
*** Bug 231796 has been marked as a duplicate of this bug. ***