First approach to fix the reload cmake project crash. Prevents the project to be reloaded while it's already being reloaded.

BUG: 229293